--- a/climeo/stylesheets/main.css
+++ b/climeo/stylesheets/main.css
@@ -1,8 +1,193 @@
-body {
+* {
+    overflow: hidden;
     margin: 0;
-    height: 100vh;
+    color:white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    /* removes scroll bars */
 }
 
-canvas{
-    display: block;
+.animate-modal{
+    animation: show 0.8s;
+    animation-fill-mode: forwards;
 }
+
+#modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: #c0c0c07d;
+  /* border: 2px solid red; */
+  z-index: 10;
+  backdrop-filter: blur(3px);
+  transition: opacity 0.5s ease-out;
+}
+
+#modal-background{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  transition: opacity 0.5s ease;
+}
+
+#about-modal{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;;
+  padding: 30px;
+  border-radius: 2px 40px 2px 40px;
+  height: 50%;
+  width: 45%;
+  background: #242435;
+  color: white;
+  box-shadow: 5px 5px 10px 0 rgb(0 0 0 / 40%);
+  transition: opacity 0.5s ease;
+}
+
+/* #about-modal h1{
+    font-size: 20px;
+    align-self: center;
+    font-weight: 700;;
+} */
+#logo{
+    align-self: center;
+}
+
+#logo img{
+    max-height: 80px;
+    max-width: 80px;
+}
+
+#about-modal p{
+    font-size: 14px;
+}
+
+#modal-content p{
+    margin-bottom: 15px;
+}
+
+#intro{
+    color: #cc2dff;
+}
+#directions{
+    color: #9a6bff;
+}
+#controls{
+    color: #63b0ff
+}
+
+#about-modal {
+  font-family: 'Miriam Libre', sans-serif;
+  transition: opacity 0.5s ease;
+}
+
+#modal-footer {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 5px;
+}
+
+
+.modal-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.modal-icons > p {
+  font-size: 14px;
+  margin-right: 10px;
+}
+
+.modal-icons > a {
+  cursor: pointer;
+  outline: none;
+}
+
+.modal-icons svg{
+    padding-right: 10px;
+    font-size: medium;
+}
+
+.modal-icons  svg:hover {
+  box-shadow: 0 4px 0 0 rgba(0, 0, 0, 0.2);
+  transform: translate(2px, 2px); 
+  /* border-radius: 10px; */
+}
+#close-modal {
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 0 10px 0 10px;
+  padding: 8px 12px;
+  color: white;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+  transition: all 0.5s ease;
+  cursor: pointer;
+  outline: none;
+}
+
+#close-modal:hover {
+  text-decoration: underline;
+  transform: translate(4px, 4px); 
+  box-shadow: 5px 5px 10px 0 rgb(0 0 0 / 40%);
+  color: black;
+  border-color: black;
+}
+
+@keyframes show{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+#page-header, #years-box, #instructions-one-box, #explanation{
+    position: absolute;
+    display: flex;
+}
+
+#page-header{
+    top: 6vh;
+    left: 3vw;
+    font-size: 20px;
+    font-weight: 700;
+    width: 30vw;
+}
+
+#years-box{
+    top: 25vh;
+}
+
+#instructions-one-box{
+    bottom: 6vh;
+    left: 3vw;
+    width: 30vw;
+}
+
+#years-list li{
+    padding-top: 50%;
+    list-style: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 11px;
+}
+
+#years-list li:hover{
+    cursor: pointer;
+    font-size: 13px;
+    text-decoration: underline;
+}
+
+.selected-year {
+    font-size: 13px;
+    text-decoration: underline;
+}
+
+
+
